--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
       <div class="form-value">Inteligência de Dados</div>
     </div>
     <div class="form-group">
-      <label class="form-label"><i class="fas fa-question-circle icon"></i>Classificação BCG</label>
-      <div class="form-value">Soluções Financeiras</div>
+      <label class="form-label"><i class="fas fa-cow icon"></i>Classificação BCG</label>
+      <div class="form-value">Vaca Leiteira</div>
     </div>
     </div>
 
